# PgPulse

./: .gitignore  Cargo.toml  README.md  config.yaml  docker-compose-grafana.yml  docker-compose.yml  prometheus.yml
scripts/: 00-init-replication.sh  00-init-replication.sql  pg_hba_replication.conf  start-replica.sh
src/: config.rs  main.rs  models.rs
src/api/: mod.rs  routes.rs
src/collectors/: mod.rs  queries.rs  replication.rs  wal.rs
src/db/: mod.rs  primary.rs  replica.rs
src/health/: evaluator.rs
src/scheduler/: poll.rs
src/storage/: in_memory.rs  metrics.rs  mod.rs
