[package]
name = "pgpulse"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde  = {version  = "1", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
tokio-postgres = "0.7.17"
chrono = {version = "0.4.44", features = ["serde"] }
